--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,43 +17,28 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build pods as FRAMEWORKS with STATIC linkage.
-  # - Gives you the generated -Swift.h headers FirebaseAuth expects
-  # - Avoids dynamic linking pains on CI
-  use_frameworks! :linkage => :static
-
-  # Ensure Objective-C pods expose module maps for Swift frameworks
+  # ? Build pods statically (NO use_frameworks!)
   use_modular_headers!
 
-  # Keep gRPC toolchain modular so modulemaps are present (fixes old modulemap errors)
-  pod 'gRPC-C++',       :modular_headers => true
-  pod 'gRPC-Core',      :modular_headers => true
-  pod 'gRPC-ProtoRPC',  :modular_headers => true
-  pod 'BoringSSL-GRPC', :modular_headers => true
+  # If a future build complains about gRPC modulemaps, uncomment these:
+  # pod 'gRPC-C++',       :modular_headers => true
+  # pod 'gRPC-Core',      :modular_headers => true
+  # pod 'gRPC-ProtoRPC',  :modular_headers => true
+  # pod 'BoringSSL-GRPC', :modular_headers => true
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
-    # Make sure Flutter's extra settings are applied
     flutter_additional_ios_build_settings(t)
-
     t.build_configurations.each do |config|
-      # iOS base + common CI flags
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # Key switches for our combo:
-      # - Allow non-modular includes (Firebase.h pulls public headers)
-      # - Build for module distribution (ensures Swift interfaces)
-      # - Define modules so <PodName>/<PodName>-Swift.h resolves
-      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
-      config.build_settings['DEFINES_MODULE'] = 'YES'
-
-      # (Optional but harmless) Set Swift version explicitly
-      config.build_settings['SWIFT_VERSION'] = '5.0'
+      # ? Do NOT enable these for static pods:
+      # config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO' # leaving default is fine
+      # config.build_settings['DEFINES_MODULE'] = 'YES'
+      # config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
 end
