--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,26 +17,31 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # ? Build pods statically (NO use_frameworks!)
+  # Build pods statically (NO use_frameworks!)
   use_modular_headers!
 
-  # If a future build complains about gRPC modulemaps, uncomment these:
-  # pod 'gRPC-C++',       :modular_headers => true
-  # pod 'gRPC-Core',      :modular_headers => true
-  # pod 'gRPC-ProtoRPC',  :modular_headers => true
-  # pod 'BoringSSL-GRPC', :modular_headers => true
+  # Ensure gRPC toolchain exports modulemaps (fixes gRPC-Core.modulemap not found)
+  pod 'gRPC-C++',       :modular_headers => true
+  pod 'gRPC-Core',      :modular_headers => true
+  pod 'gRPC-ProtoRPC',  :modular_headers => true
+  pod 'BoringSSL-GRPC', :modular_headers => true
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
+    # Keep Flutter’s build settings in sync with Pods
     flutter_additional_ios_build_settings(t)
+
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      # Avoid sim arm64 build issues on Intel Macs / CI simulators
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      # ? Do NOT enable these for static pods:
-      # config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO' # leaving default is fine
+
+      # IMPORTANT for static pods: do NOT force module-style flags here.
+      # Leave these OFF; enabling them caused the "non-modular header" errors.
+      # config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO'
       # config.build_settings['DEFINES_MODULE'] = 'YES'
       # config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
