--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,13 +17,13 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build Swift pods as frameworks (static linkage) so -Swift.h headers are generated
+  # Build Swift pods as frameworks (static linkage) so -Swift.h headers exist
   use_frameworks! :linkage => :static
 
-  # Ensure ObjC pods expose module maps (fixes non-modular includes)
+  # Keep Obj-C pods modular to avoid non-modular header errors
   use_modular_headers!
 
-  # Keep gRPC toolchain visible with modulemaps (some Firebase deps still use it)
+  # Ensure gRPC toolchain has modulemaps (Firebase brings these in)
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -33,27 +33,25 @@ target 'Runner' do
 end
 
 post_install do |installer|
+  # Xcode/Flutter baseline flags and interop relaxations
   installer.pods_project.targets.each do |t|
     flutter_additional_ios_build_settings(t)
-
     t.build_configurations.each do |config|
-      # Base iOS & common flags
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # Allow non-modular includes inside framework modules to satisfy some Firebase headers
+      # Allow a few legacy headers used inside framework modules (Firebase)
       config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
     end
   end
 
-  # Ensure Swift pods are treated as modules (generates -Swift.h for ObjC callers)
+  # CocoaPods 1.16.x: use native_target.build_configurations
   installer.pod_targets.each do |pt|
     next unless pt.uses_swift?
-    pt.target_build_configurations.each do |config_name, build_settings|
-      build_settings['DEFINES_MODULE'] = 'YES'
-      # Not strictly required, but keeps Swift ABI stable across slices
-      build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
-      build_settings['SWIFT_VERSION'] = '5.0'
+    pt.native_target.build_configurations.each do |bc|
+      bc.build_settings['DEFINES_MODULE'] = 'YES'
+      bc.build_settings['SWIFT_VERSION']  = '5.0'
+      # Optional, but keeps Swift ABI stable across slices
+      bc.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
 end
