--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,13 +17,13 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build Swift pods as frameworks (static linkage) so -Swift.h headers exist
+  # Build Swift-using pods as frameworks (static linkage) so the `-Swift.h` headers exist
   use_frameworks! :linkage => :static
 
   # Keep Obj-C pods modular to avoid non-modular header errors
   use_modular_headers!
 
-  # Ensure gRPC toolchain has modulemaps (Firebase brings these in)
+  # Ensure the gRPC toolchain exposes modulemaps (fixes gRPC-Core.modulemap not found)
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -33,24 +33,23 @@ target 'Runner' do
 end
 
 post_install do |installer|
-  # Xcode/Flutter baseline flags and interop relaxations
+  # Flutter recommended extra build settings for each target
   installer.pods_project.targets.each do |t|
     flutter_additional_ios_build_settings(t)
     t.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      # Allow a few legacy headers used inside framework modules (Firebase)
+      # Allow firebase_* Swift modules to import umbrella headers that re-export ObjC pods
       config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
     end
   end
 
-  # CocoaPods 1.16.x: use native_target.build_configurations
+  # CocoaPods 1.16.x: set Swift/module flags using the supported API
   installer.pod_targets.each do |pt|
     next unless pt.uses_swift?
     pt.native_target.build_configurations.each do |bc|
       bc.build_settings['DEFINES_MODULE'] = 'YES'
       bc.build_settings['SWIFT_VERSION']  = '5.0'
-      # Optional, but keeps Swift ABI stable across slices
       bc.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
