--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,7 @@ project 'Runner', {
   'Release' => :release,
 }
 
+# quiet multi-source warnings
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
 # Flutter integration
@@ -16,13 +17,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build Swift/C/ObjC pods as static frameworks (creates -Swift.h)
-  use_frameworks! :linkage => :static
-
-  # Expose modules for ObjC-only deps
+  # ✅ NO use_frameworks!  (pods build as static libs)
   use_modular_headers!
 
-  # gRPC toolchain as modules (avoids modulemap errors)
+  # Make gRPC headers resolvable if any plugin brings them in
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -38,9 +36,10 @@ post_install do |installer|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      s['DEFINES_MODULE'] = 'YES'
-      s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-      s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
+      # ⛔ DO NOT set these for static pods (they cause the non-modular header error):
+      # s['DEFINES_MODULE'] = 'YES'
+      # s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      # s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
     end
   end
 end
