--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,6 @@ project 'Runner', {
   'Release' => :release,
 }
 
-# quiet multi-source warnings
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
 # Flutter integration
@@ -17,10 +16,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # ✅ NO use_frameworks!  (pods build as static libs)
+  # ✅ Build pods as static libs (Flutter/Firebase default): DO NOT call use_frameworks!
   use_modular_headers!
 
-  # Make gRPC headers resolvable if any plugin brings them in
+  # Keep gRPC toolchain modular (fixes gRPC-Core.modulemap not found)
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -36,7 +35,7 @@ post_install do |installer|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      # ⛔ DO NOT set these for static pods (they cause the non-modular header error):
+      # ⛔ DO NOT enable framework-style flags for static pods:
       # s['DEFINES_MODULE'] = 'YES'
       # s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
       # s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
