--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,10 +16,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # ✅ Build pods as static libs (Flutter/Firebase default): DO NOT call use_frameworks!
+  # ✅ Static pods (DO NOT use `use_frameworks!`)
   use_modular_headers!
 
-  # Keep gRPC toolchain modular (fixes gRPC-Core.modulemap not found)
+  # Keep gRPC toolchain modular so modulemaps are found
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -35,7 +35,7 @@ post_install do |installer|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      # ⛔ DO NOT enable framework-style flags for static pods:
+      # ⛔ Do NOT add these for static pods:
       # s['DEFINES_MODULE'] = 'YES'
       # s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
       # s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
