--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,10 +16,11 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # ✅ Static pods (DO NOT use `use_frameworks!`)
-  use_modular_headers!
+  # ✅ Build as **dynamic frameworks** so -Swift.h overlays exist
+  use_frameworks!
 
-  # Keep gRPC toolchain modular so modulemaps are found
+  # Make gRPC headers resolvable as modules (fixes modulemap issues)
+  use_modular_headers!
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -29,16 +30,24 @@ target 'Runner' do
 end
 
 post_install do |installer|
+  # CocoaPods 1.16-safe loop
   installer.pods_project.targets.each do |t|
+    # Make Flutter & Pods agree on flags
     flutter_additional_ios_build_settings(t) rescue nil
+
     t.build_configurations.each do |config|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      # ⛔ Do NOT add these for static pods:
-      # s['DEFINES_MODULE'] = 'YES'
-      # s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-      # s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+
+      # Allow umbrella headers in framework modules to include non-modular headers
+      s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+
+      # Ensure pods are true framework-style modules (expose module + Swift overlay)
+      s['DEFINES_MODULE'] = 'YES'
+
+      # Keep this OFF to avoid extra ABI constraints
+      s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
 end
