--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,53 +1,1 @@
-platform :ios, '16.0'
-ENV['COCOAPODS_DISABLE_STATS'] = 'true'
-
-project 'Runner', {
-  'Debug'   => :debug,
-  'Profile' => :release,
-  'Release' => :release,
-}
-
-install! 'cocoapods', :warn_for_multiple_pod_sources => false
-
-# Flutter integration
-flutter_bin = %x(which flutter).strip
-flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
-flutter_ios_podfile_setup
-
-target 'Runner' do
-  # ✅ Build as **dynamic frameworks** so -Swift.h overlays exist
-  use_frameworks!
-
-  # Make gRPC headers resolvable as modules (fixes modulemap issues)
-  use_modular_headers!
-  pod 'gRPC-C++',       :modular_headers => true
-  pod 'gRPC-Core',      :modular_headers => true
-  pod 'gRPC-ProtoRPC',  :modular_headers => true
-  pod 'BoringSSL-GRPC', :modular_headers => true
-
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-end
-
-post_install do |installer|
-  # CocoaPods 1.16-safe loop
-  installer.pods_project.targets.each do |t|
-    # Make Flutter & Pods agree on flags
-    flutter_additional_ios_build_settings(t) rescue nil
-
-    t.build_configurations.each do |config|
-      s = config.build_settings
-      s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
-      s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # Allow umbrella headers in framework modules to include non-modular headers
-      s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-
-      # Ensure pods are true framework-style modules (expose module + Swift overlay)
-      s['DEFINES_MODULE'] = 'YES'
-
-      # Keep this OFF to avoid extra ABI constraints
-      s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
-    end
-  end
-end
+[PASTE THE Podfile CONTENT FROM SECTION 1 HERE VERBATIM]
