--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,7 @@ project 'Runner', {
   'Release' => :release,
 }
 
-# Keep CocoaPods output sane
+# Quieter output and stable behavior
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
 # Flutter integration
@@ -17,51 +17,36 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build pods as **static frameworks** (needed so Swift pods emit -Swift.h).
-  use_frameworks! :linkage => :static
+  # IMPORTANT:
+  #  - Do NOT call `use_frameworks!` (we want static libs, not frameworks)
+  #  - Do NOT call `use_modular_headers!` globally
 
-  # DO NOT set `use_modular_headers!` globally — it breaks some Firebase headers.
-  # Instead, make only the toolchain pods modular:
-
-  # gRPC toolchain as modules (fixes modulemap lookups for C++/Core/Proto)
+  # Only gRPC toolchain needs modular headers (modulemap). Everything else stays default.
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
   pod 'BoringSSL-GRPC', :modular_headers => true
-
-  # Make the Firebase umbrella header importable as a module
-  pod 'Firebase', :modular_headers => true
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
-    # Align with Flutter’s settings (safe if it no-ops)
-    begin
-      flutter_additional_ios_build_settings(t)
-    rescue
-    end
+    # Keep Flutter’s build settings aligned
+    flutter_additional_ios_build_settings(t) rescue nil
 
     t.build_configurations.each do |config|
       s = config.build_settings
 
-      # Baseline + simulator quirk
+      # iOS 16 baseline; speed up sim builds on Intel workers
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
 
-      # Ensure module support and allow umbrella to include public headers cleanly
-      s['CLANG_ENABLE_MODULES'] = 'YES'
-      s['DEFINES_MODULE'] = 'YES'
-      s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-
-      # Keep OFF for static frameworks
+      # Enforce STATIC LIB behavior: do NOT build pods as modules/frameworks
+      s['DEFINES_MODULE'] = 'NO'
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
-
-      # Ensure headers are found via modules first
-      # (don’t rely on raw Public headers unless the modulemap dictates it)
-      header_search = s['HEADER_SEARCH_PATHS'] || '$(inherited)'
-      s['HEADER_SEARCH_PATHS'] = header_search
+      s.delete('CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES')
+      s.delete('MODULEMAP_FILE') if s['MODULEMAP_FILE']
     end
   end
 end
