--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,1 +1,63 @@
-[PASTE THE RUBY ABOVE VERBATIM]
+$pod = @'
+platform :ios, '16.0'
+ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+
+project 'Runner', {
+  'Debug'   => :debug,
+  'Profile' => :release,
+  'Release' => :release,
+}
+
+install! 'cocoapods', :warn_for_multiple_pod_sources => false
+
+# Flutter integration
+flutter_bin  = %x(which flutter).strip
+flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
+require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
+flutter_ios_podfile_setup
+
+target 'Runner' do
+  # Keep default: build pods as STATIC LIBRARIES
+  # (NO use_frameworks!, NO global use_modular_headers!)
+  # Some ObjC deps must expose modulemaps for Swift pods to import.
+
+  # ==== Firebase & Google (modular headers) ====
+  %w[
+    FirebaseCore
+    FirebaseCoreExtension
+    FirebaseCoreInternal
+    FirebaseAppCheckInterop
+    FirebaseAuthInterop
+    FirebaseFirestoreInternal
+    GoogleUtilities
+    RecaptchaInterop
+  ].each do |p|
+    pod p, :modular_headers => true
+  end
+
+  # ==== gRPC toolchain (modular headers) ====
+  pod 'gRPC-C++',       :modular_headers => true
+  pod 'gRPC-Core',      :modular_headers => true
+  pod 'gRPC-ProtoRPC',  :modular_headers => true
+  pod 'BoringSSL-GRPC', :modular_headers => true
+
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |t|
+    flutter_additional_ios_build_settings(t) rescue nil
+    t.build_configurations.each do |config|
+      s = config.build_settings
+      s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      s['CLANG_ENABLE_MODULES'] = 'YES'
+      # Keep static libs truly static; avoid forcing framework/module behavior
+      s.delete('DEFINES_MODULE')
+      s.delete('CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES')
+      s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
+    end
+  end
+end
+'@
+$pod | Set-Content -Encoding ASCII -NoNewline ios\Podfile
