--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-$pod = @'
 platform :ios, '16.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -8,6 +7,7 @@ project 'Runner', {
   'Release' => :release,
 }
 
+# Keep CocoaPods output sane
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
 # Flutter integration
@@ -17,47 +17,44 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Keep default: build pods as STATIC LIBRARIES
-  # (NO use_frameworks!, NO global use_modular_headers!)
-  # Some ObjC deps must expose modulemaps for Swift pods to import.
+  # IMPORTANT: No global use_frameworks!/use_modular_headers! here.
+  # We keep pods as static libraries, and selectively enable modules
+  # only for the ObjC pods that Swift-based Firebase pods rely on.
 
-  # ==== Firebase & Google (modular headers) ====
-  %w[
-    FirebaseCore
-    FirebaseCoreExtension
-    FirebaseCoreInternal
-    FirebaseAppCheckInterop
-    FirebaseAuthInterop
-    FirebaseFirestoreInternal
-    GoogleUtilities
-    RecaptchaInterop
-  ].each do |p|
-    pod p, :modular_headers => true
-  end
-
-  # ==== gRPC toolchain (modular headers) ====
+  # gRPC toolchain as modules (needed by FirebaseFirestore via grpc)
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
   pod 'BoringSSL-GRPC', :modular_headers => true
 
+  # Firebase & Google ObjC deps as modules so Swift Firebase pods can import them
+  pod 'GoogleUtilities',          :modular_headers => true
+  pod 'RecaptchaInterop',         :modular_headers => true
+  pod 'FirebaseCore',             :modular_headers => true
+  pod 'FirebaseCoreExtension',    :modular_headers => true
+  pod 'FirebaseCoreInternal',     :modular_headers => true
+  pod 'FirebaseAppCheckInterop',  :modular_headers => true
+  pod 'FirebaseAuthInterop',      :modular_headers => true
+  pod 'FirebaseFirestoreInternal',:modular_headers => true
+
+  # Let Flutter add the rest of the plugin pods
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
+    # Keep Flutter’s extra settings in sync
     flutter_additional_ios_build_settings(t) rescue nil
+
     t.build_configurations.each do |config|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      # Ensure Clang modules are on (so modulemaps are respected)
       s['CLANG_ENABLE_MODULES'] = 'YES'
-      # Keep static libs truly static; avoid forcing framework/module behavior
-      s.delete('DEFINES_MODULE')
-      s.delete('CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES')
+      # Do NOT force frameworks or distribution here; pods are static libs
+      s['DEFINES_MODULE'] = 'NO'
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
 end
-'@
-$pod | Set-Content -Encoding ASCII -NoNewline ios\Podfile
