--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,3 @@
-Set-Location "C:\flutter_projects\first_flutter_app"
-
-$pod = @'
 platform :ios, '16.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -21,7 +18,7 @@ flutter_ios_podfile_setup
 target 'Runner' do
   # Keep CocoaPods default (static libraries). Do NOT call use_frameworks! or use_modular_headers! globally.
 
-  # gRPC toolchain must expose modules
+  # gRPC toolchain must expose modules for Swift interop
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
@@ -47,11 +44,10 @@ post_install do |installer|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      # Allow Firebase umbrella headers to be imported by Swift pods
       s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      # Keep OFF for static libs
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
 end
-'@
-
-$pod | Set-Content -Encoding ASCII -NoNewline ios\Podfile
