--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,38 +1,60 @@
-platform :ios, '13.0'
+platform :ios, '16.0'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
-  'Debug' => :debug,
+  'Debug'   => :debug,
   'Profile' => :release,
   'Release' => :release,
 }
 
+# Quiet multi-source warnings
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), File.dirname(`which flutter`))
-
-flutter_root = File.expand_path('..', File.dirname(`which flutter`))
-load File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper.rb')
+# --- Flutter integration (robust path on CI like Codemagic) ---
+flutter_bin  = %x(which flutter).strip
+flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
+require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 flutter_ios_podfile_setup
+# --------------------------------------------------------------
 
 target 'Runner' do
-  use_frameworks! :linkage => :static   # <— Static frameworks are safe with most pods
-  use_modular_headers!
+  # gRPC toolchain as modular headers (Objective-C pods expose modules)
+  pod 'gRPC-C++',       :modular_headers => true
+  pod 'gRPC-Core',      :modular_headers => true
+  pod 'gRPC-ProtoRPC',  :modular_headers => true
+  pod 'BoringSSL-GRPC', :modular_headers => true
 
+  # Firebase/Google deps that Swift pods need as modules when linked statically
+  pod 'FirebaseCore',              :modular_headers => true
+  pod 'FirebaseCoreExtension',     :modular_headers => true
+  pod 'FirebaseCoreInternal',      :modular_headers => true
+  pod 'FirebaseAppCheckInterop',   :modular_headers => true
+  pod 'FirebaseAuthInterop',       :modular_headers => true
+  pod 'FirebaseFirestoreInternal', :modular_headers => true
+  pod 'GoogleUtilities',           :modular_headers => true
+  pod 'RecaptchaInterop',          :modular_headers => true
+
+  # Install all Flutter pods; CocoaPods will keep them **static libraries** by default
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
-  # Your plugins (kept implicit via flutter_install_all_ios_pods)
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
+    # Align Flutter and Pods build settings; safe on CocoaPods 1.16.x
+    flutter_additional_ios_build_settings(t) rescue nil
+
     t.build_configurations.each do |config|
-      # Ensure iOS 13+ (prevents transitive pods from downgrading)
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-      # Avoid simulator arch issues locally; harmless on CI archive
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      s = config.build_settings
+      s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+
+      # Enable C/ObjC modules and allow non-modular imports inside modules
+      s['CLANG_ENABLE_MODULES'] = 'YES'
+      s['DEFINES_MODULE'] = 'YES'
+      s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+
+      # Keep this OFF with static libraries
+      s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
-  flutter_post_install(installer) if defined?(flutter_post_install)
 end
